package dev.kaldiroglu.dp.creational.ch02.factoryMethod.report;

public class DailySalesReport extends Report{

    public DailySalesReport(String name) {
        super(name);
    }

    @Override
    public void open() {

    }

    @Override
    public void print() {

    }

    @Override
    public void save() {

    }

    @Override
    public void revert() {

    }

    @Override
    public void close() {

    }
}
