package dev.kaldiroglu.dp.creational.ch02.factoryMethod.report;

public interface ReportFactory {
    Report generateReport();
}
